test/types/type_variables/deitz/part7/test_error1.chpl
class C {
  type t;
  var x : t;
}

var c = (new owned C(int)).borrow();

writeln(c);

proc foo(i : int) {
  writeln(i);
}

foo(c);
